--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "\"Md Ariful islam Roni \"",
   "license": "ISC",
   "dependencies": {
-    "boostrap": "^2.0.0"
+    "boostrap": "^2.0.0",
+    "date": "^1.0.2"
   }
 }
